--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preload" href="./assets/css/style.css" as="style">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preload" href="./assets/css/style.min.css" as="style">
+    <link rel="stylesheet" href="./assets/css/style.min.css">
     <title>404 NOT FOUND</title>
 </head>
 <body>
